--- a/style.css
+++ b/style.css
@@ -168,6 +168,7 @@ a.my-button{
       overflow-y: scroll;
       max-width: 100vw;
       height: auto;
+      padding: 20px 0px;
     }
 
     h1 {
