--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ h1 {
       overflow-y: scroll;
       max-width: 100vw;
       height: auto;
-      padding: 20px 0px;
+      padding: 0px;
     }
 
     footer {
@@ -195,6 +195,8 @@ h1 {
         display: flex; align-items: center; justify-content: center;
         flex-direction: column;
         padding: 0px; margin: 0px;
+        transform: scale(.92);
+        margin: 0px 0px;
     }
 
     #load {
