--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ body {
     height: auto;
     padding: 20px;
     margin: 80px 0px;
+    transform: scale(.9);
 }
 
 .cards {
@@ -188,7 +189,7 @@ h1 {
     }
 
     footer {
-        margin-top: 40px;
+        margin-bottom: 15px;
     }
 
     #box {
